; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_freebsd.c_uv_uptime.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_freebsd.c_uv_uptime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { double }

@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_uptime(double* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca double*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.timespec, align 8
  store double* %0, double** %3, align 8
  %6 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %7 = call i32 @clock_gettime(i32 %6, %struct.timespec* %5)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @errno, align 4
  %12 = call i32 @UV__ERR(i32 %11)
  store i32 %12, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  %14 = getelementptr inbounds %struct.timespec, %struct.timespec* %5, i32 0, i32 0
  %15 = load double, double* %14, align 8
  %16 = load double*, double** %3, align 8
  store double %15, double* %16, align 8
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @clock_gettime(i32, %struct.timespec*) #1

declare dso_local i32 @UV__ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
